language/move-lang/tests/move_check/translated_ir_tests/commands/assign_in_one_if_branch.exp
error: 

   ┌── tests/move_check/translated_ir_tests/commands/assign_in_one_if_branch.move:6:5 ───
   │
 6 │     x == y;
   │     ^ Invalid usage of local 'x'
   ·
 2 │     let x;
   │         - The local might not have a value due to this position. The local must be assigned a value before being used
   │

error: 

   ┌── tests/move_check/translated_ir_tests/commands/assign_in_one_if_branch.move:6:10 ───
   │
 6 │     x == y;
   │          ^ Invalid usage of local 'y'
   ·
 3 │     let y;
   │         - The local might not have a value due to this position. The local must be assigned a value before being used
   │

